--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,10 @@ steps:
   inputs:
     contents: '**/*.war'
     targetFolder: '$(build.artifactStagingDirectory)'
+    
+- task: DotNetCoreInstaller@0
+  inputs:
+    version: '2.1.300' # replace this value with the version that you need for your project
 
 - task: PublishBuildArtifacts@1
   inputs:
