--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,3 +49,9 @@ steps:
     pathToPublish: '$(build.artifactStagingDirectory)'
     
     - script: dotnet build # Include additional options such as --configuration to meet your need
+    
+ - task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
